# rust-typed-builder

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: complicate_build.rs  default_generics.rs  example.rs  example_for_linting.rs  example_prefix_suffix.rs  postbuild.rs  tmp_example_default.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs  struct_info.rs  util.rs
src/: builder_attr.rs  field_info.rs  lib.rs  struct_info.rs  util.rs
tests/: enum.rs  extend.rs  no_std.rs  no_type_leakage.rs  struct.rs  tests.rs
typed-builder-macro/: Cargo.toml
typed-builder-macro/src/: builder_attr.rs  enum_info.rs  field_info.rs  lib.rs  mutator.rs  struct_info.rs  util.rs
