[package]
name = "typed-builder"
description = "Compile-time type-checked builder derive"
version = "0.5.1"
authors = ["IdanArye <idanarye@gmail.com>", "Chris Morgan <me@chrismorgan.info>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/rust-typed-builder"
documentation = "https://idanarye.github.io/rust-typed-builder/"
readme = "README.md"
keywords = ["builder"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
