[package]
name = "typed-builder"
description = "Compile-time type-checked builder derive"
version = "0.14.0"
authors = ["IdanArye <idanarye@gmail.com>", "Chris Morgan <me@chrismorgan.info>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/rust-typed-builder"
documentation = "https://idanarye.github.io/rust-typed-builder/"
readme = "README.md"
keywords = ["builder"]
categories = ["rust-patterns"]

[dependencies]
typed-builder-macro = { path = "typed-builder-macro", version = "=0.14.0"}
